# cfast

./: .gitignore  Build.bat  Notes.txt  generate_vs_solution.bat
cfast/: CMakeLists.txt
cfast/source/: editor.c  game_module.c  game_types.h  hot_reload.c  main.c  reflection_core.c  reflection_core.h
